dist_man1_MANS=

if BUILD_TYZEND
  dist_man1_MANS+=tyzend.1
endif

if ENABLE_QT
  dist_man1_MANS+=tyzen-qt.1
endif

if BUILD_TYZEN_CLI
  dist_man1_MANS+=tyzen-cli.1
endif

if BUILD_TYZEN_TX
  dist_man1_MANS+=tyzen-tx.1
endif

if BUILD_TYZEN_UTIL
  dist_man1_MANS+=tyzen-util.1
endif

if ENABLE_WALLET
if BUILD_TYZEN_WALLET
  dist_man1_MANS+=tyzen-wallet.1
endif
endif
